--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=8888
 
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:springcoredb
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.hibernate.ddl-auto=create
